--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ I will really say thank you so much to you and feeling great of your job.
           <img src="images/portfolio/2.png" alt="portfolio Jamgift image" title="portfolio jamGift picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>jamgift</h4>
+              <h4>جم گیفت</h4>
               <p>وبسایت و فروشگاه آنلاین فروش گیم تایم و محصولات بلیزارد</p>
             </div>
           </div>
