--- a/index.html
+++ b/index.html
@@ -678,6 +678,7 @@ I will really say thank you so much to you and feeling great of your job.
         <ul class="list-inline campany-list pr-0 mr-0">
           <li><a href="https://megagift.ir/store/گیفت-کارت-های-اپل-و-ایتونز-">گیفت کارت اپل و ایتونز</a></li>
           <li><a href="https://megagift.ir/store/گیفت-کارت-های-استیم">شارژ والت استیم ، استیم والت</a></li>
+          <li><a href="https://megagift.ir/product/%DA%AF%DB%8C%D9%85-%D8%AA%D8%A7%DB%8C%D9%85-6">گیم تایم 60 روزه</a></li>
           <li><a href="https://megagift.ir/store/%DA%AF%DB%8C%D9%81%D8%AA-%DA%A9%D8%A7%D8%B1%D8%AA-%D9%87%D8%A7%DB%8C-%D9%85%D8%A7%DB%8C%DA%A9%D8%B1%D9%88%D8%B3%D8%A7%D9%81%D8%AA-%D8%A7%DB%8C%DA%A9%D8%B3-%D8%A8%D8%A7%DA%A9%D8%B3-">گیفت کارت ایکس باکس لایو ، ایکس باکس گیم پس</a></li>
         </ul>
       </div>
