--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1 class="display-2">
           <span class="display-2--intro">به A<span class="text-j">j</span>Web خوش آمدید</span>
           <span class="display-2--description lh-base">
-            برنامه نویسی نرم افزار اختصاصی ، طراحی وبسایت ، طراحی وب اپلیکیشن های پیش رونده (PWA) طراحی اپلیکیشن موبایل و بات دیسکورد و تلگرام
+           برنامه نویسی ، طراحی و پیاده سازی نرم افزارهای اختصاصی و مناسب کسب و کار تحت وب ، موبایل و دسکتاپ
           </span>
         </h1>
         <a href="tel://00989166113881" class="rounded-pill btn btn-rounded">تماس و پشتیبانی 
@@ -170,7 +170,7 @@
           <div class="icon d-block fas fa-paper-plane"></div>
           <h3 class="display-3--title mt-1">اپلیکیشن موبایل</h3>
           <p class="lh-lg">
-            طراحی و پیاده سازی اپلیکشن های موبایل Android  و IOS به صورت بهینه و Native
+            طراحی و توسعه انواع اپلیکیشن های موبایل (IOS , Android) به صورت Native و بهینه
           </p>
           
           <a href="tel://00989166113881" class="rounded-pill btn btn-rounded border-primary">تماس و پشتیبانی
@@ -197,7 +197,7 @@
           <div class="icon d-block fas fa-code"></div>
           <h3 class="display-3--title mt-1">وب سایت</h3>
           <p class="lh-lg">
-            طراحی پیاده سازی و توسعه انواع وبسایت ها ، اپلیکیشن های پیشرونده و انواع سیستم های تحت وب
+           طراحی و توصعه انواع وبسایت‌ها و وب اپلیکیشن ها به صورت ایستا و داینامیک با آخرین متدهای توسعه وب  
           </p>
           
           <a href="tel://00989166113881" class="rounded-pill btn btn-rounded border-primary">تماس و پشتیبانی
