--- a/index.html
+++ b/index.html
@@ -100,32 +100,32 @@
       <div class="row">
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
+            <img src="images/campanies/1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid rounded-circle">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
+            <img src="images/campanies/2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid rounded-circle">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
+            <img src="images/campanies/3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid rounded-circle">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
+            <img src="images/campanies/4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid rounded-circle">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
+            <img src="images/campanies/5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid rounded-circle">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+            <img src="images/campanies/6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid rounded-circle">
           </div>
         </div>
       </div>
